kubernetes/apps/base/otoge/tachi/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: ${GATEWAY_ENDPOINT:=websecure}
      kind: Gateway

  hostnames:
    - ${GATEWAY_DOMAIN:=${SUBDOMAIN}.${DOMAIN}}

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /ir

      backendRefs:
        - name: tachi-server
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: tachi-client
          port: 8080
